--- a/SitefinityWebApp/Mvc/Views/Shared/_AMPLayout.cshtml
+++ b/SitefinityWebApp/Mvc/Views/Shared/_AMPLayout.cshtml
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<script async src="https://cdn.ampproject.org/v0.js"></script>
+	<script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
 	<title>@ViewBag.Title</title>
 	@* TODO *@
 	<link rel="canonical" href="http://example.ampproject.org/article-metadata.html" />
