Wired html pages to amp pages; Fixed bug with gallery component;

--- a/SitefinityWebApp/Views/Shared/_AMPLayoutBlogs.cshtml
+++ b/SitefinityWebApp/Views/Shared/_AMPLayoutBlogs.cshtml
@@ -41,7 +41,33 @@
 					<div class="BlogPost-Content">
 						@RenderBody()
 						</div>
+					<div class="BlogPost-Author">
+						<div class="row">
+							<div class="col-3">
+								<amp-img width="150" height="150" src='//d585tldpucybw.cloudfront.net/sfimages/default-source/default-album/rob-lauer.jpeg?sfvrsn=1' layout="responsive" title='Rob Lauer' alt='Rob Lauer is a Product Manager for Telerik'></amp-img>
+							</div>
+							<div class="col-9">
+								<span class="about">About the Author</span>
+								<h3 class="h1">Rob Lauer</h3>
+								<p>Rob Lauer is a Product Manager for Telerik and has a passion for hybrid mobile app development and the open web. In his other life he raises two kids, plays Ultimate Frisbee, and (for better or worse) is an avid Wisconsin Badger fan. Rob can be found on Twitter <a href="https://twitter.com/RobLauer">@@RobLauer</a>.</p>
+							</div>
+						</div>
 					</div>
+					</div>
+				<div class="col-3">
+					<div class="Sidebar">
+						<h5 class="u-ttu u-ff-sans2 u-fs18 u-mb2">Topics</h5>
+						<!-- Dynamic Content -->
+						<ul class="List BlogPost-Topics">
+							<li><a href='/blogs/.net'>.NET</a></li>
+							<li><a href='/blogs/cloud'>Cloud</a></li>
+							<li><a href='/blogs/mobile'>Mobile</a></li>
+							<li><a href='/blogs/web'>Web</a></li>
+							<li><a href='/blogs/testing-alm'>Testing &amp; ALM</a></li>
+							<li><a href='/blogs/company-news'>Company News</a></li>
+						</ul>
+					</div>
+				</div>
 				</div>
 		</div>
 </body>
